...
            android:textColor="@color/black"
            app:icon="@android:drawable/ic_search_category_default"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="Iniciar Sesión"
            android:textSize="15sp"
...
