...
            app:boxCornerRadiusBottomEnd="26dp"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxBackgroundColor="#F5FFFE"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Escribe un mensaje..."
                android:textColorHint="#99C8C2"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="4"
...
